<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/Texto1"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="36sp"
            tools:text="@string/Texto1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/Texto2"
            android:textSize="36sp"
            tools:text="@string/Texto2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnTodasTareas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="40sp"
            android:background="@android:color/background_dark"
            android:onClick="EntrarTodasTareas"
            android:text="@string/TodasTareas"
            android:textColor="#2196F3"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnNuevaTarea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="40sp"
            android:background="@android:color/background_dark"
            android:onClick="EntrarNuevaActividad"
            android:text="@string/NuevaTarea"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>