<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityTodasTareas">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:baselineAligned="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#3F51B5"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/atras"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAlignBottom="true"
                android:contentDescription="@string/back"
                app:srcCompat="?attr/actionModeCloseDrawable" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#3F51B5"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTareaNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/tarea"
                android:textColor="@android:color/background_light"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/para"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tvTareaFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fechaFintarea"
                android:textSize="25sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvTareaDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/descripcion"
            android:textSize="35sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="0"
        android:gravity="top|end"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_mas"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="@android:drawable/ic_menu_edit"
            android:contentDescription="@string/back"
            app:srcCompat="@android:drawable/ic_input_add" />
    </LinearLayout>

</LinearLayout>